--- a/Procreate.html
+++ b/Procreate.html
@@ -37,7 +37,19 @@
         <center>
             <div>
                 <div class="headtx">My Procreate's works</div>
-                <div class="pro_gallery"></div>
+                <div class="pro_gallery">
+                    <img src="./img/bg.jpg"
+                        style="width: 70vw; height: 30vh; object-fit: cover; align-self: center; border-radius: 20px 20px 0px 0px;"
+                        alt="IU">
+                    <div class="pic2">
+                        <img src="./img/tonton.jpg"
+                            style="width: 50%; height: 17vw; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 20px;"
+                            alt="Tonton">
+                        <img src="./img/kumiho.gif"
+                            style="width: 50%; height: 17vw; object-fit: cover; align-self: center; border-radius: 0px 0px 20px 0px;"
+                            alt="Kumiho">
+                    </div>
+                </div>
             </div>
         </center>
     </div>
@@ -56,37 +68,37 @@
                         you can contact me by the contact below.</span></div>
                 <div class="headtx contacttx">Contact</div>
                 <div class="contactdiv row">
-                    <div class="contact col col-lg-2">
+                    <div class="contact col-4 col-lg-2">
                         <a href="nichanansakornoi@gmail.com">
                             <img src="./img/email.png" style="width: 50px;" alt="email">
                             <!-- <span>nichanansakornoi@gmail.com</span> -->
                         </a>
                     </div>
-                    <div class="contact col col-lg-2">
+                    <div class="contact col-4 col-lg-2">
                         <a href="tel:0944800443">
                             <img src="./img/phone.png" style="width: 50px;" alt="phone">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
-                    <div class="contact col col-lg-2">
+                    <div class="contact col-4 col-lg-2">
                         <a href="https://github.com/DREKGON">
                             <img src="./img/github.png" style="width: 50px;" alt="phone">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
-                    <div class="contact col col-lg-2">
+                    <div class="contact col-4 col-lg-2">
                         <a href="https://line.me/ti/p/pt5glL5IKv">
                             <img src="./img/line.png" style="width: 50px;" alt="line">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
-                    <div class="contact col col-lg-2">
+                    <div class="contact col-4 col-lg-2">
                         <a href="https://www.facebook.com/nichanan.saconnoi/">
                             <img src="./img/facebook.png" style="width: 50px;" alt="facebook">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
-                    <div class="contact col col-lg-2">
+                    <div class="contact col-4 col-lg-2">
                         <a href="https://www.instagram.com/mjshxdg/">
                             <img src="./img/instagram.png" style="width: 50px;" alt="instagram">
                             <!-- <span>0944800443</span> -->
