--- a/Procreate.html
+++ b/Procreate.html
@@ -43,10 +43,10 @@
                         alt="IU">
                     <div class="pic2">
                         <img src="./img/tonton.jpg"
-                            style="width: 50%; height: 17vw; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 20px;"
+                            style="width: 50%; height: 33vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 20px;"
                             alt="Tonton">
                         <img src="./img/kumiho.gif"
-                            style="width: 50%; height: 17vw; object-fit: cover; align-self: center; border-radius: 0px 0px 20px 0px;"
+                            style="width: 50%; height: 33vh; object-fit: cover; align-self: center; border-radius: 0px 0px 20px 0px;"
                             alt="Kumiho">
                     </div>
                 </div>
