--- a/Procreate.html
+++ b/Procreate.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./img/NSLogo_P.png">
     <title>Nichanan's Procreate</title>
 </head>
 
@@ -35,21 +36,33 @@
 
     <div class="container-fluid gallery_sec1">
         <center>
-            <div>
-                <div class="headtx">My Procreate's works</div>
-                <div class="pro_gallery">
-                    <img src="./img/bg.jpg"
-                        style="width: 70vw; height: 30vh; object-fit: cover; align-self: center; border-radius: 20px 20px 0px 0px;"
-                        alt="IU">
-                    <div class="pic2">
-                        <img src="./img/tonton.jpg"
-                            style="width: 50%; height: 33vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 20px;"
-                            alt="Tonton">
-                        <img src="./img/kumiho.gif"
-                            style="width: 50%; height: 33vh; object-fit: cover; align-self: center; border-radius: 0px 0px 20px 0px;"
-                            alt="Kumiho">
-                    </div>
+            <div class="headtx">My Procreate's works</div>
+            <div class="pro_gallery">
+                <img src="./img/bg.jpg"
+                    style="width: 85%; height: 50vh; object-fit: cover; align-self: center; border-radius: 20px 20px 0px 0px;"
+                    alt="IU">
+                <div class="pic2">
+                    <img src="./img/yuta.jpg"
+                        style="width: 50%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
+                        alt="Yuta">
+                    <img src="./img/bella.png"
+                        style="width: 50%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
+                        alt="Bella">
                 </div>
+                <div class="pic2">
+                    <img src="./img/kumiho.gif"
+                        style="width: 50%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
+                        alt="Kumiho">
+                    <img src="./img/pika.png"
+                        style="width: 50%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
+                        alt="Pikachu">
+                </div>
+                <img src="./img/wall1.png"
+                    style="width: 85%; height: 50vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
+                    alt="Wallpaper1">
+                <img src="./img/wall2.png"
+                    style="width: 85%; height: 50vh; object-fit: cover; align-self: center; border-radius: 0px 0px 20px 20px;"
+                    alt="Wallpaper2">
             </div>
         </center>
     </div>
@@ -70,37 +83,37 @@
                 <div class="contactdiv row">
                     <div class="contact col-4 col-lg-2">
                         <a href="nichanansakornoi@gmail.com">
-                            <img src="./img/email.png" style="width: 50px;" alt="email">
+                            <img src="./img/email.png" style="width: 40px;" alt="email">
                             <!-- <span>nichanansakornoi@gmail.com</span> -->
                         </a>
                     </div>
                     <div class="contact col-4 col-lg-2">
                         <a href="tel:0944800443">
-                            <img src="./img/phone.png" style="width: 50px;" alt="phone">
+                            <img src="./img/phone.png" style="width: 40px;" alt="phone">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
                     <div class="contact col-4 col-lg-2">
                         <a href="https://github.com/DREKGON">
-                            <img src="./img/github.png" style="width: 50px;" alt="phone">
+                            <img src="./img/github.png" style="width: 40px;" alt="phone">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
                     <div class="contact col-4 col-lg-2">
                         <a href="https://line.me/ti/p/pt5glL5IKv">
-                            <img src="./img/line.png" style="width: 50px;" alt="line">
+                            <img src="./img/line.png" style="width: 40px;" alt="line">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
                     <div class="contact col-4 col-lg-2">
                         <a href="https://www.facebook.com/nichanan.saconnoi/">
-                            <img src="./img/facebook.png" style="width: 50px;" alt="facebook">
+                            <img src="./img/facebook.png" style="width: 40px;" alt="facebook">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
                     <div class="contact col-4 col-lg-2">
                         <a href="https://www.instagram.com/mjshxdg/">
-                            <img src="./img/instagram.png" style="width: 50px;" alt="instagram">
+                            <img src="./img/instagram.png" style="width: 40px;" alt="instagram">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
