--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./img/NSLogo_P.png">
     <title>Nichanan's Portfolio</title>
 </head>
 
@@ -40,17 +41,15 @@
     </div>
     <div class="container-fluid sec2" id="sample_of_my_works">
         <center>
-            <div>
-                <div class="headtx">Sample of my works</div>
-                <div class="spgallery">
-                    <img src="./img/grav.png"
-                        style="width: 70vw; height: 30vh; object-fit: cover; align-self: center; border-radius: 20px 20px 0px 0px;"
-                        alt="Graveyard">
-                    <img src="./img/forest.png"
-                        style="width: 70vw; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 20px 20px;"
-                        alt="Forest">
-                    <!-- <img src="./img/us.png" style="object-fit: scale-down; width: 55vw;" alt="Among_Us"> -->
-                </div>
+            <div class="headtx">Sample of my works</div>
+            <div class="spgallery">
+                <img src="./img/grav.png"
+                    style="width: 85%; height: 30vh; object-fit: cover; align-self: center; border-radius: 20px 20px 0px 0px;"
+                    alt="Graveyard">
+                <img src="./img/forest.png"
+                    style="width: 85%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 20px 20px;"
+                    alt="Forest">
+                <!-- <img src="./img/us.png" style="object-fit: scale-down; width: 55vw;" alt="Among_Us"> -->
             </div>
         </center>
     </div>
@@ -71,37 +70,37 @@
                 <div class="contactdiv row">
                     <div class="contact col-4 col-lg-2">
                         <a href="nichanansakornoi@gmail.com">
-                            <img src="./img/email.png" style="width: 50px;" alt="email">
+                            <img src="./img/email.png" style="width: 40px;" alt="email">
                             <!-- <span>nichanansakornoi@gmail.com</span> -->
                         </a>
                     </div>
                     <div class="contact col-4 col-lg-2">
                         <a href="tel:0944800443">
-                            <img src="./img/phone.png" style="width: 50px;" alt="phone">
+                            <img src="./img/phone.png" style="width: 40px;" alt="phone">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
                     <div class="contact col-4 col-lg-2">
                         <a href="https://github.com/DREKGON">
-                            <img src="./img/github.png" style="width: 50px;" alt="phone">
+                            <img src="./img/github.png" style="width: 40px;" alt="phone">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
                     <div class="contact col-4 col-lg-2">
                         <a href="https://line.me/ti/p/pt5glL5IKv">
-                            <img src="./img/line.png" style="width: 50px;" alt="line">
+                            <img src="./img/line.png" style="width: 40px;" alt="line">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
                     <div class="contact col-4 col-lg-2">
                         <a href="https://www.facebook.com/nichanan.saconnoi/">
-                            <img src="./img/facebook.png" style="width: 50px;" alt="facebook">
+                            <img src="./img/facebook.png" style="width: 40px;" alt="facebook">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
                     <div class="contact col-4 col-lg-2">
                         <a href="https://www.instagram.com/mjshxdg/">
-                            <img src="./img/instagram.png" style="width: 50px;" alt="instagram">
+                            <img src="./img/instagram.png" style="width: 40px;" alt="instagram">
                             <!-- <span>0944800443</span> -->
                         </a>
                     </div>
