--- a/Procreate.html
+++ b/Procreate.html
@@ -34,7 +34,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid gallery_sec1">
+    <div class="container-fluid progallery_sec1">
         <center>
             <div class="headtx">My Procreate's works</div>
             <div class="pro_gallery">
