--- a/Procreate.html
+++ b/Procreate.html
@@ -38,31 +38,42 @@
         <center>
             <div class="headtx">My Procreate's works</div>
             <div class="pro_gallery">
-                <img src="./img/bg.jpg"
-                    style="width: 85%; height: 50vh; object-fit: cover; align-self: center; border-radius: 20px 20px 0px 0px;"
-                    alt="IU">
+                <a href="https://drekgon.github.io/My_Online_Portfolio/img/bg.jpg" target="_blank">
+                    <img src="./img/bg.jpg"
+                        style="width: 85%; height: 50vh; object-fit: cover; align-self: center; border-radius: 20px 20px 0px 0px;"
+                        alt="IU"></a>
                 <div class="pic2">
-                    <img src="./img/yuta.jpg"
-                        style="width: 50%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
-                        alt="Yuta">
-                    <img src="./img/bella.png"
-                        style="width: 50%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
-                        alt="Bella">
+                    <a href="https://drekgon.github.io/My_Online_Portfolio/img/yuta.jpg" target="_blank"
+                        style="width: 50%;">
+                        <img src="./img/yuta.jpg"
+                            style="width: 100%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
+                            alt="Yuta"></a>
+                    <a href="https://drekgon.github.io/My_Online_Portfolio/img/bella.png" target="_blank"
+                        style="width: 50%;">
+                        <img src="./img/bella.png"
+                            style="width: 100%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
+                            alt="Bella"></a>
                 </div>
                 <div class="pic2">
-                    <img src="./img/kumiho.gif"
-                        style="width: 50%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
-                        alt="Kumiho">
-                    <img src="./img/pika.png"
-                        style="width: 50%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
-                        alt="Pikachu">
+                    <a href="https://drekgon.github.io/My_Online_Portfolio/img/kumiho.gif" target="_blank"
+                        style="width: 50%;">
+                        <img src="./img/kumiho.gif"
+                            style="width: 100%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
+                            alt="Kumiho"></a>
+                    <a href="https://drekgon.github.io/My_Online_Portfolio/img/pika.png" target="_blank"
+                        style="width: 50%;">
+                        <img src="./img/pika.png"
+                            style="width: 100%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
+                            alt="Pikachu"></a>
                 </div>
-                <img src="./img/wall1.png"
-                    style="width: 85%; height: 50vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
-                    alt="Wallpaper1">
-                <img src="./img/wall2.png"
-                    style="width: 85%; height: 50vh; object-fit: cover; align-self: center; border-radius: 0px 0px 20px 20px;"
-                    alt="Wallpaper2">
+                <a href="https://drekgon.github.io/My_Online_Portfolio/img/wall1.png" target="_blank">
+                    <img src="./img/wall1.png"
+                        style="width: 85%; height: 50vh; object-fit: cover; align-self: center; border-radius: 0px 0px 0px 0px;"
+                        alt="Wallpaper1"></a>
+                <a href="https://drekgon.github.io/My_Online_Portfolio/img/wall2.png" target="_blank">
+                    <img src="./img/wall2.png"
+                        style="width: 85%; height: 50vh; object-fit: cover; align-self: center; border-radius: 0px 0px 20px 20px;"
+                        alt="Wallpaper2"></a>
             </div>
         </center>
     </div>
