--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
         <center>
             <div class="headtx">Sample of my works</div>
             <div class="spgallery">
-                <img src="./img/grav.png"
-                    style="width: 85%; height: 30vh; object-fit: cover; align-self: center; border-radius: 20px 20px 0px 0px;"
-                    alt="Graveyard">
-                <img src="./img/forest.png"
-                    style="width: 85%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 20px 20px;"
-                    alt="Forest">
+                <a href="https://drekgon.github.io/My_Online_Portfolio/img/grav.png" target="_blank">
+                    <img src="./img/grav.png"
+                        style="width: 85%; height: 30vh; object-fit: cover; align-self: center; border-radius: 20px 20px 0px 0px;"
+                        alt="Graveyard"></a>
+                <a href="https://drekgon.github.io/My_Online_Portfolio/img/forest.png" target="_blank">
+                    <img src="./img/forest.png"
+                        style="width: 85%; height: 30vh; object-fit: cover; align-self: center; border-radius: 0px 0px 20px 20px;"
+                        alt="Forest"></a>
                 <!-- <img src="./img/us.png" style="object-fit: scale-down; width: 55vw;" alt="Among_Us"> -->
             </div>
         </center>
